# GStreamerCPP-python

./: LICENSE  README.md  build_windows.bat  setup.bat
backend/: dev_desktop.py  requirements.txt  video_bridge.py
frontend/: package.json  vite.config.js
frontend/public/: index.html
frontend/src/: App.svelte
frontend/src/lib/: VideoPlayer.svelte
streaming/: CMakeLists.txt  gst_rtsp_streamer.cpp  gst_rtsp_streamer.h  python_bindings.cpp
